# aias-auth-sdk

./: .gitignore  .gitmodules  Cargo.toml  README.md
ffi/: Cargo.toml
ffi/src/: lib.h  lib.rs
sdk/: .gitignore  Cargo.toml
sdk/src/: lib.rs  utils.rs
sdk/test_data/: invalid_data.json
src/: lib.rs
test_data/: signature.txt
