[package]
name = "aias-auth-sdk"
version = "0.1.0"
authors = ["kino-ma <kino.ma.ms@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.115", features = ["derive"] }