[package]
name = "aias-auth-sdk"
version = "0.1.0"
authors = ["kino-ma <kino.ma.ms@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.3.0"
pem = "0.8.1"

serde_json = "1.0"
serde = { version = "1.0.115", features = ["derive"] }

fair-blind-signature = { git = "https://github.com/project-aias/fair-blind-signature" }
aias-core = { git = "https://github.com/project-aias/aias-core" }